# time-series-turnover-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1  run.sh
data/: Time_Series___Turnover (1).csv  col_names.pkl
models/: xgb_turnover.joblib.metrics.json
reports/benchmark/: benchmark_metrics.json  benchmark_predictions.csv  benchmark_predictions_detailed.csv  metrics.json  predictions.csv
src/: benchmark.py  evaluate.py  explain.py  preprocessing.py  train.py  utils.py
src/turnover_prediction/: benchmark.py  comparison_leader_month.py  comparison_pipeline.py  detailed_comparison.py  eda.py  evaluate.py  explain.py  fala_ai_pipeline.py  prediction_comparison.py  preprocessing.py  train.py  tuning.py
tests/: test_benchmark.py  test_pipeline.py
