[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turnover_prediction"
version = "0.1.0"
description = "Time series turnover prediction package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Marcus Rodrigues", email = "marcus.v.rodrigues@usp.br"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas==1.5.3",
    "scikit-learn==1.2.2",
    "xgboost==1.7.4",
    "shap==0.41.0",
    "matplotlib==3.7.1",
    "seaborn==0.12.2",
    "pytest==7.3.1",
    "joblib==1.2.0",
    "imbalanced-learn==0.11.0",
    "statsmodels==0.14.0",
    "numpy==1.23.5",
    "tensorflow>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["turnover_prediction*"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
"" = "src"